--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://sahilbhandari.github.io/react-gh-pages",
+  "homepage": "https://sahil-bhandari.github.io/aboutme",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "aboutme -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
